# nginx-1.9.12-mine

./: .gitignore  CMakeLists.txt
LearnC/: CMakeLists.txt  ex1.c
config/: CMakeLists.txt  ngx_auto_config.h  ngx_modules.c
objs/: CMakeLists.txt  ngx_auto_config.h
src/core/: nginx.c  ngx_array.c  ngx_array.h  ngx_buf.c  ngx_buf.h  ngx_conf_file.c  ngx_conf_file.h  ngx_config.h  ngx_connection.c  ngx_connection.h  ngx_core.h  ngx_cpuinfo.c  ngx_crc.h  ngx_crc32.c  ngx_crc32.h  ngx_crypt.c  ngx_crypt.h  ngx_cycle.c
src/event/: CMakeLists.txt  ngx_event.c
src/event/modules/: CMakeLists.txt  Makefile  cmake_install.cmake
src/http/: CMakeLists.txt
src/http/modules/: CMakeLists.txt  Makefile  cmake_install.cmake
src/os/unix/: CMakeLists.txt  ngx_alloc.c  ngx_alloc.h  ngx_atomic.h  ngx_process.c  ngx_process_cycle.c
